--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ anyio=3.5.0=py39haa95532_0
 argon2-cffi=21.3.0=pyhd3eb1b0_0
 argon2-cffi-bindings=21.2.0=py39h2bbff1b_0
 asttokens=2.0.5=pyhd3eb1b0_0
-async-generator=1.10=pypi_0
 attrs=21.4.0=pyhd3eb1b0_0
 babel=2.9.1=pyhd3eb1b0_0
 backcall=0.2.0=pyhd3eb1b0_0
@@ -16,7 +15,6 @@ ca-certificates=2022.4.26=haa95532_0
 certifi=2022.6.15=py39haa95532_0
 cffi=1.15.0=py39h2bbff1b_1
 charset-normalizer=2.0.4=pyhd3eb1b0_0
-chromedriver-binary=103.0.5060.53.0=pypi_0
 colorama=0.4.4=pyhd3eb1b0_0
 cryptography=37.0.1=py39h21b164f_0
 debugpy=1.5.1=py39hd77b12b_0
@@ -24,10 +22,10 @@ decorator=5.1.1=pyhd3eb1b0_0
 defusedxml=0.7.1=pyhd3eb1b0_0
 entrypoints=0.4=py39haa95532_0
 executing=0.8.3=pyhd3eb1b0_0
-flake8=4.0.1=pypi_0
-h11=0.13.0=pypi_0
+flake8=4.0.1
+h11=0.13.0
 idna=3.3=pyhd3eb1b0_0
-ipdb=0.13.9=pypi_0
+ipdb=0.13.9
 ipykernel=6.9.1=py39haa95532_0
 ipython=8.3.0=py39haa95532_0
 ipython_genutils=0.2.0=pyhd3eb1b0_1
@@ -43,7 +41,7 @@ jupyterlab_pygments=0.1.2=py_0
 jupyterlab_server=2.12.0=py39haa95532_0
 markupsafe=2.1.1=py39h2bbff1b_0
 matplotlib-inline=0.1.2=pyhd3eb1b0_2
-mccabe=0.6.1=pypi_0
+mccabe=0.6.1
 mistune=0.8.4=py39h2bbff1b_1000
 nbclassic=0.3.5=pyhd3eb1b0_0
 nbclient=0.5.13=py39haa95532_0
@@ -52,7 +50,7 @@ nbformat=5.3.0=py39haa95532_0
 nest-asyncio=1.5.5=py39haa95532_0
 notebook=6.4.11=py39haa95532_0
 openssl=1.1.1p=h2bbff1b_0
-outcome=1.2.0=pypi_0
+outcome=1.2.0
 packaging=21.3=pyhd3eb1b0_0
 pandocfilters=1.5.0=pyhd3eb1b0_0
 parso=0.8.3=pyhd3eb1b0_0
@@ -61,9 +59,9 @@ pip=21.2.4=py39haa95532_0
 prometheus_client=0.13.1=pyhd3eb1b0_0
 prompt-toolkit=3.0.20=pyhd3eb1b0_0
 pure_eval=0.2.2=pyhd3eb1b0_0
-pycodestyle=2.8.0=pypi_0
+pycodestyle=2.8.0
 pycparser=2.21=pyhd3eb1b0_0
-pyflakes=2.4.0=pypi_0
+pyflakes=2.4.0
 pygments=2.11.2=pyhd3eb1b0_0
 pyopenssl=22.0.0=pyhd3eb1b0_0
 pyparsing=3.0.4=pyhd3eb1b0_0
@@ -75,25 +73,25 @@ python-fastjsonschema=2.15.1=pyhd3eb1b0_0
 pytz=2022.1=py39haa95532_0
 pywin32=302=py39h2bbff1b_2
 pywinpty=2.0.2=py39h5da7b33_0
-pyyaml=6.0=pypi_0
+pyyaml=6.0
 pyzmq=22.3.0=py39hd77b12b_2
 requests=2.28.0=py39haa95532_0
-selenium=4.3.0=pypi_0
+selenium=4.3.0
 send2trash=1.8.0=pyhd3eb1b0_1
 setuptools=61.2.0=py39haa95532_0
 six=1.16.0=pyhd3eb1b0_1
 sniffio=1.2.0=py39haa95532_1
-sortedcontainers=2.4.0=pypi_0
+sortedcontainers=2.4.0
 soupsieve=2.3.1=pyhd3eb1b0_0
 sqlite=3.38.5=h2bbff1b_0
 stack_data=0.2.0=pyhd3eb1b0_0
 terminado=0.13.1=py39haa95532_0
 testpath=0.6.0=py39haa95532_0
-toml=0.10.2=pypi_0
+toml=0.10.2
 tornado=6.1=py39h2bbff1b_0
 traitlets=5.1.1=pyhd3eb1b0_0
-trio=0.21.0=pypi_0
-trio-websocket=0.9.2=pypi_0
+trio=0.21.0
+trio-websocket=0.9.2
 typing-extensions=4.1.1=hd3eb1b0_0
 typing_extensions=4.1.1=pyh06a4308_0
 tzdata=2022a=hda174b7_0
@@ -107,4 +105,4 @@ wheel=0.37.1=pyhd3eb1b0_0
 win_inet_pton=1.1.0=py39haa95532_0
 wincertstore=0.2=py39haa95532_2
 winpty=0.4.3=4
-wsproto=1.1.0=pypi_0
+wsproto=1.1.0
