--- a/config.yml
+++ b/config.yml
@@ -5,8 +5,10 @@
 dir_pcap: ${CONF_ABSPATH}/pcap
 dir_tmp: ${CONF_ABSPATH}/tmp
 dir_output: ${CONF_ABSPATH}/output
-requests_wait_time: 1
-get_full_replies_wait_time: 1
+requests_wait_time: 1.1
+get_full_replies_wait_time: 1.1
+download_file_wait_time: 1.1
+
 response_status_code_error_threshold: 400
 
 
